# machine-translate-docx

./: .clinerules  .dockerignore  .editorconfig  .env.example  .gitignore  .pylintrc  AGENT.md  AGENTS.md  AI_INSTRUCTIONS.md  Build-Project.bat  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS_FA.txt  JVM_Migration_Analysis.docx  LICENSE  Makefile  NWN 3145 sf2 - table fix1_PER.docx  PROJECT_MEMORY.md  README.md  README_FA.md  SECURITY.md  TESTING.md  app.py  audit-from-Jules -2026-05-12.md  commit_msg.txt  compile.bat  deploy.sh  docker-compose.yml  fix-report-v2.txt  fix-report.txt  fix_syntax.py  gui_translate_polish.py  gui_translator.py  index.ejs  insert_js.py  insert_report_crash.py  jules-prompt-deep-audit.md  (+25 more)
.claude/rules/: code-style.md  security.md  testing.md  translation-quality.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  django.yml  docker-build.yml  docker-test.yml  pylint.yml
compile/: README.md
compile/windows/: compile.bat
docs/: agent-handoff.md  agent-run-report.md  aligner-research.md  architecture.md  audit-2026-05-11.md  audit-light-2026-05-12.md  audit-prompt-v2-2026-05-13.md  batch-api-analysis.md  cli-shrink-phase3-handoff.md  codex-audit-2026-05-12.md  configuration.md  debug-2026-05-11-night.md  decisions-2026.md  deep-debug-audit-2026-05-18.md  edge-cases-2026-05-13.md  error-catalog.md  index.md  jules-audit-2026-05-12.md  next-session-handoff.md  post-refactor-audit.md  prompt-architecture-followups.md  prompt-rewrite-2026-05-12.md  quickref.md  real-engine-test-findings.md  refactor-roadmap.md  roadmap-persian-double-lines.md  rtl-rendering.md  server-deploy.md  session-state-2026-05-16-bridge-collapse.md  session-state-2026-05-16-cache-d-c-p2.md  session-state-2026-05-16-sprint-d-complete.md  session-state-2026-05-16.md  subtitle-syncing.md  telegram-alerts-setup.md  testing.md  translation-style.md  uml.md  v2-backend-todo.md  v2-frontend-hardening.md  v2-future-ideas.md  (+2 more)
docs/adr/: ADR-001-align-contract.md
docs/aligner-corpus-baseline-2026-05-17/: README.md  advanced_patterns.json  benchmark_summary.json  bigram_protection_eval.json  bigram_summary.json  bigram_top.tsv  char_length_dist.tsv  dangling_in_pre.tsv  group_size_dist.tsv  leading_missing.tsv  llm_rescue_summary.json  post_count.tsv  pre_count.tsv  sage_summary.json  summary.json  trailing_punct_dist.tsv
docs/archive/: PR-text.md  README.md  agent-handoff.md  aligner-phase-3-2026-05-12.md  analysis-raw.md  internal-audit-2026-05-13.md  jules-deep-audit-2026-05-12.md  master-audit-2026-05-16.md  phase-F-blocked.md  queued-ideas-2026-05-13.md  session-state-2026-05-16-cache-d-c-p2.md  session-state-2026-05-16-sprint-d-complete.md  v2-backend-todo.md
docs/decisions/: 001-migration-and-dual-architecture.md  002-smtv-tag-and-unicode-preservation.md  003-python-gui-interoperability.md  004-resilience-and-performance.md  006-phase-b-architecture-and-audit-notes.md
docs/diagrams/: README.md
docs/playbooks/: add-feature.md  fix-bug.md  translate-batch.md  update-memory.md
docs/reports/: jules-migration-session-report-2026-03-10.md
machine_translate_docx/: __init__.py
machine_translator/: ARCHITECTURE.md  JULES_CONTEXT.md
machine_translator/core/: config.py  logger.py
machine_translator/engines/: base.py
packaging/: README.md  mac_build.md  mtd.spec  mtd_entry.py
prompts/: German_split_double_prompt.txt  _smtv_locks.txt  _smtv_locks_proposal.txt  _smtv_locks_proposal_v2.txt  _smtv_locks_proposal_v3.txt  _smtv_locks_proposal_v4.txt  _smtv_locks_proposal_v5.txt  _smtv_locks_proposal_v6.txt  _smtv_locks_proposal_v7.txt  polish_PER.txt  polish_PER_proposal.txt  polish_PER_proposal_v2.txt  polish_PER_proposal_v3.txt  polish_PER_proposal_v4.txt  polish_PER_proposal_v5.txt  polish_PER_proposal_v6.txt  polish_PER_proposal_v7.txt  polish_universal.txt  prompt_Persian.txt  prompt_Universal.txt  prompt_align - Copy.txt  prompt_align.txt  prompt_align_double.txt  prompt_double.txt  prompt_polish.txt  prompt_split_double - Copy.txt  prompt_split_double.txt  prompt_stage3_final.txt  translate_PER.txt  translate_PER_proposal.txt  translate_PER_proposal_v2.txt  translate_PER_proposal_v3.txt  translate_PER_proposal_v4.txt  translate_PER_proposal_v5.txt  translate_PER_proposal_v6.txt  translate_PER_proposal_v7.txt  translate_universal.txt  پولیش من و سونات 01.txt  پولیش من و سونات 02.txt
scripts/: Caddyfile.example  README.md  build.sh  deploy.sh  install_server.sh  mtd-backup.sh  mtd-logrotate  mtd-server.service  run-gui.sh  run-server.sh  setup_wizard.py
server/: api.py  celery_app.py  worker.py
src/: REQUEST_CLARIFY.md  api_logger.py  check_chrome.py  config.py  dispatch.py  exceptions.py  gui_translate_polish.py  gui_translator-3.py  machine-translate-docx.process_ai_action.CHANGES.txt  machine-translate-docx.py  machine_translate_docx.py  machine_translate_gui.py  runner.py  runtime.py  table.py  translation_health.py  translator.py  updtlnk.py
tests/: conftest.py  generate_test_docx.py  test_aligner_empty_row_fixes_2026_05_19.py  test_aligner_only.py  test_aligner_split.py  test_dispatch.py  test_docx_io_cells.py  test_docx_io_metadata.py  test_docx_io_parse.py  test_docx_io_runs.py  test_docx_io_save.py  test_engines_registry.py  test_fa_postprocess.py  test_get_ctx_snapshot.py  test_launcher_endpoints.py  test_line_count_reconciler.py  test_log_paths.py  test_log_sidecar_pair.py  test_network_utils.py  test_pipeline_integration.py  test_polisher_parse.py  test_post_test_hardening.py  test_prompts_regression.py  test_queue_status.py  test_retry.py  test_runner.py  test_runtime_threading.py  test_selenium_utils.py  test_stream_circuit.py  test_stream_helper.py  test_stream_line_contract.py  test_telegram_alert.py  test_translation_log_writer.py  test_translator_pipeline.py  test_translator_utils.py  test_v2_e2e.py  test_validators.py
tools/: aligner_bench.py  reconciler_prompt_sweep.py
translation_robot/: docx_parser.py
web/v2/: app.js  (+10 more)
(+202 files in other folders)
